einstellung_derive/src/trybuild_tests/default_function_type_mismatch.stderr
error[E0308]: mismatched types
 --> src/trybuild_tests/default_function_type_mismatch.rs
  |
  |     #[config(default = ||123)]
  |                          ^^^ expected `String`, found integer
  |
help: try using a conversion method
  |
6 |     #[config(default = ||123.to_string())]
  |                             ++++++++++++
